Default color not saving/applying correctly (Texture Slots) #59650

Closed
opened 2018-12-20 02:52:14 +01:00 by Aaron Edmistone · 8 comments

System Information
Operating system: Windows 10 Pro 1803 17134.471
Graphics card: NVidia RTX 2080Ti

Blender Version
Broken: (Update: tried again on 2019-01-16, still broken on current nightly)
blender-2.80-84c06e996a7a-win64 (Date: 2019-01-14 19:48, Hash: 84c06e996a, Branch: blender2.8) [ Nightly ]
blender-2.80-c4ee77cde8b0-win64 (Date: 2018-12-19 22:13, Hash: c4ee77cde8, Branch: blender2.8) [ Nightly ]
blender-2.80-ea33b90a1bf-win64 (Date: 2018-12-16 18:53, Hash: ea33b90a1b, Branch: blender2.8)

GIF showing bug reproduction
bug.gif

Short description of error
Creating new texture in Texture Slots shows default color as Black but applies White when clicking OK

Exact steps for others to reproduce the error

  1. Open Blender with default Cube scene
  2. Navigate to Texture Paint work space
  3. Click + button under Texture Slots to add new texture
  4. Note default color and click OK to apply

~This will apply White regardless of the default color selected
~Changing the color in the color dialog resolves the issue for that texture slot only
~Defaults to "black"(actually white) after restart regardless of last color applied (not sure if this is intended)

**System Information** Operating system: Windows 10 Pro 1803 17134.471 Graphics card: NVidia RTX 2080Ti **Blender Version** Broken: *(Update: tried again on 2019-01-16, still broken on current nightly)* blender-2.80-84c06e996a7a-win64 (Date: 2019-01-14 19:48, Hash: 84c06e996a7a, Branch: blender2.8) [ Nightly ] blender-2.80-c4ee77cde8b0-win64 (Date: 2018-12-19 22:13, Hash: c4ee77cde8b0, Branch: blender2.8) [ Nightly ] blender-2.80-ea33b90a1bf-win64 (Date: 2018-12-16 18:53, Hash: ea33b90a1bf, Branch: blender2.8) **GIF showing bug reproduction** ![bug.gif](https://archive.blender.org/developer/F6011533/bug.gif) **Short description of error** Creating new texture in Texture Slots shows default color as Black but applies White when clicking OK **Exact steps for others to reproduce the error** 1. Open Blender with default Cube scene 2. Navigate to Texture Paint work space 3. Click + button under Texture Slots to add new texture 4. Note default color and click OK to apply ~This will apply White regardless of the default color selected ~Changing the color in the color dialog resolves the issue for that texture slot only ~Defaults to "black"(actually white) after restart regardless of last color applied (not sure if this is intended)

Added subscriber: @aaronedmistone

Added subscriber: @aaronedmistone

Added subscriber: @StephenSwaney

Added subscriber: @StephenSwaney

Got a .blend for us showing the problem?

Got a .blend for us showing the problem?

This happens even in the default cube scene as I have explained above.
Would a .blend file still help in this scenario? If so I can make one.

This happens even in the default cube scene as I have explained above. Would a .blend file still help in this scenario? If so I can make one.

Added subscriber: @ZedDB

Added subscriber: @ZedDB
Brecht Van Lommel was assigned by Sebastian Parborg 2019-01-23 17:40:31 +01:00

I can confirm that the default color is black but the created texture is actually white.

I can confirm that the default color is black but the created texture is actually white.

This issue was referenced by 7b48e04b6e

This issue was referenced by 7b48e04b6e5949c87d37cb0a425ab1067c770d8c

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#59650
No description provided.