Fix T59650: adding texture paint slot image shows wrong color.